[gd_scene load_steps=3 format=3 uid="uid://bfn2y8x8gyoas"]

[ext_resource type="PackedScene" uid="uid://btabol7j5s3xa" path="res://util/menus/right_menu_button.tscn" id="1_1blx4"]
[ext_resource type="Script" path="res://util/menus/menu_object_button.gd" id="2_trovu"]

[node name="MenuObjectButton" instance=ExtResource("1_1blx4")]
text = "Placeholder"
script = ExtResource("2_trovu")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
